[package]
name = "rustis"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.8"
log = "^0.4"
derive_more = "^0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
futures-util = "0.3.29"
regex = "1.10.2"